fix: layout inside Messagebox
- adjusted layout of placeholder and interactions to match mockup

Changes:
- class .messageBox: added flex-direction: column;

--- a/src/app/main-page/chat-main/chat-main.component.scss
+++ b/src/app/main-page/chat-main/chat-main.component.scss
@@ -46,6 +46,7 @@
   margin: 16px;
   height: 184px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
